--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <header class="header">
+        <div class="header__texto">
+            <h2 class="no-margin">Blog de Cafe con consejos y cursos</h2>
+            <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
+        </div>
+    </header>
     
 </body>
 </html>
