--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="contenedor">
             <div class="barra">
                 <a href="index.html" class="logo">
-                    <h1 class="logo__nombre">Blog<span class="logo__bolg">DeCafe</span></h1>
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafe</span></h1>
                 </a>
 
                 <nav class="navegacion">
@@ -33,5 +33,48 @@
         </div>
     </header>
     
+    <div class="contenedor contenido_principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog1.jpg" alt="imagen blog">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de Grano de Café</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium dolorum, veritatis architecto delectus dolores eos. Ea obcaecati nisi suscipit eveniet ut neque maxime distinctio, magni, tempora voluptas enim, veritatis ab?</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">3 Deliciosas Recetas De Café</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium dolorum, veritatis architecto delectus dolores eos. Ea obcaecati nisi suscipit eveniet ut neque maxime distinctio, magni, tempora voluptas enim, veritatis ab?</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del Café</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium dolorum, veritatis architecto delectus dolores eos. Ea obcaecati nisi suscipit eveniet ut neque maxime distinctio, magni, tempora voluptas enim, veritatis ab?</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y talleres</h3>
+
+            <ul>
+                <li>HTML 5</li>
+                <li>CSS 3</li>
+            </ul>
+        </aside>
+    </div>
 </body>
 </html>
