--- a/contacto.html
+++ b/contacto.html
@@ -48,11 +48,11 @@
             </div>
             <div class="campo">
                 <label class="campo__label" for="mesaje">Manesaje</label>
-                <textarea class="campo__field" id="mensaje"></TEXTarea>
+                <textarea class="campo__field campo__field--textarea" id="mensaje"></TEXTarea>
             </div>
 
             <div class="campo">
-                <input class="campo__field--textarea{" type="submit" value="Enviar" class="boton boton--primario">
+                <input class="boton boton--primario" type="submit" value="Enviar" class="boton boton--primario">
             </div>
         </form>
 
